--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <p>Hi Github</p>
-
-<p>Introducing branching with feature1</p>
+<p>Introducing branching with (dropdown)</p>
 <p>Hi! feature1</p>
 <p>Happy learning</p>
